--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -3,7 +3,14 @@ db.driver=com.mysql.cj.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/pp2023_231?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
 db.username=root
 db.password=1234
+db.model.package=app.model
 
 # Hibernate properties
-hibernate.show_sql=true
-hibernate.hbm2ddl.auto=update
+db.initialSize=30
+db.minIdle=30
+db.maxIdle=60
+db.timeBetweenEvictionRunsMillis=30000
+db.minEvictableIdleTimeMillis=60000
+db.testOnBorrow=true
+db.validationQuery=select version()
+
